2001-06-22  Elliot Glaysher  <nuriko.chan@home.com>

	* Comicpage/comicpage.glade: Removed useless tab at top of display.

2001-06-21  Elliot Glaysher  <nuriko.chan@home.com>

	* debian/control: Updated dependencies.

2001-06-20  Elliot Glaysher  <nuriko.chan@home.com>

	* TODO: Removed an old, done entry.
	* Netcomics/GtkComics.pm: Expunged all code from this file. Moved
	code from ./comicpage here. Modified to use Glade to create the
	interface dynamically at runtime. (Hence it now depends upon
	Gtk::GladeXML.
	* Comicpage/comicpage.glade: First interface file commited! GTK+
	interface created at runtime!
	* Netcomics/Config.pm.in: Where the hell did that stray "p" come from?
	
2001-06-13  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* doc/netcomics.pod: Added an example for recreating webpages with
	absolute paths.
	* netcomicsrc: Added the new $webpage_absolute_paths option.
	* Netcomics/HTML.pm (generate_HTML_page): Updated to use the new
	$webpage_absolute_paths option.
	* Netcomics/Config.pm.in (processARGV): Added -wa & -nwa for
	specifying to use absolute paths for image URLs.

2001-06-12  Elliot Glaysher  <nuriko.chan@home.com>

	* Netcomics/HTML.pm: Updated so image URLs are absolute.
	* comicpage: Corrected the about box so names are on different lines.
	
2001-06-02  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* README: Updated to reflect the presence of comicpage in the
	distribution.

2001-05-29  Elliot Glaysher  <nuriko.chan@home.com>

	* Netcomics/GtkComics.pm: Small change to remove $widgets->
	{'optionmenu1_item0'};
	* comicpage ({init}): Changes to translate groups into menu items.
	(change_group): New feature! comicpage can kindof do groups!
	
2001-05-28  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Makefile (distclean): Updated to use RM_RF.
	(RM_RF): Changed RMDIR to RM_RF since Makefile.pl will generate
	that macro to be used.

2001-05-27  Elliot Glaysher  <nuriko.chan@home.com>
